tests/machine/x/kotlin/record_assign.error
line 61:
OpenJDK 64-Bit Server VM warning: Options -Xverify:none and -noverify were deprecated in JDK 13 and will likely be removed in a future release.
/workspace/mochi/tests/machine/x/kotlin/record_assign.kt:61:12: error: unresolved reference: Counter
fun inc(c: Counter): Unit {
           ^

 60: 
 61: fun inc(c: Counter): Unit {
 62:     c.n = c.n + 1
